--- a/ubiquity/localization/ca/developer.po
+++ b/ubiquity/localization/ca/developer.po
@@ -2,11 +2,10 @@
 #
 # Localizers:
 # Toni Hermoso Pulido <toniher@softcatala.org>
- 
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
-"POT-Creation-Date: 2009-06-22 06:33+0100\n"
+"POT-Creation-Date: 2009-06-25 19:44+0900\n"
 "Last-Translator: Toni Hermoso Pulido <toniher@softcatala.org>\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -61,8 +60,7 @@ msgid "run selector-selector"
 msgstr "executa selector-selector"
 
 msgctxt "run selector-selector.help"
-msgid ""
-"<dl>\n"
+msgid "<dl>\n"
 "  <dt>\n"
 "    <b>Left-click / Enter</b>\n"
 "  </dt>\n"
@@ -96,8 +94,7 @@ msgid ""
 "  </dt>\n"
 "  <dd>Scroll horizontally</dd>\n"
 "</dl>"
-msgstr ""
-"<dl>\n"
+msgstr "<dl>\n"
 "  <dt>\n"
 "    <b>Clic primari (esquerre) / Retorn</b>\n"
 "  </dt>\n"
@@ -133,14 +130,12 @@ msgstr ""
 "</dl>"
 
 msgctxt "run selector-selector.description"
-msgid ""
-"<ul style=\"list-style-image:none\">\n"
+msgid "<ul style=\"list-style-image:none\">\n"
 "  <li>Lets you type a jQuery selector and highlights matched elements.</li>\n"
 "  <li>Hovering on an element generates a matching selector.</li>\n"
 "</ul>"
-msgstr ""
-"<ul style=\"list-style-image:none\">\n"
-"  <li>Us permet escriure un selector de jQuery i en ressalta els elements coincidents.</li>\n"
+msgstr "<ul style=\"list-style-image:none\">\n"
+"  <li>Us permet escriure un selector de jQuery i en ressalta els elements "
+"coincidents.</li>\n"
 "  <li>En enfocar a un element es genera un selector coincident.</li>\n"
 "</ul>"
-
