--- a/ubiquity/localization/ca/general.po
+++ b/ubiquity/localization/ca/general.po
@@ -2,11 +2,10 @@
 #
 # Localizers:
 # Toni Hermoso Pulido <toniher@softcatala.org>
- 
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
-"POT-Creation-Date: 2009-06-22 06:33+0100\n"
+"POT-Creation-Date: 2009-06-20 00:47+0900\n"
 "Last-Translator: Toni Hermoso Pulido <toniher@softcatala.org>\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +19,9 @@ msgstr "negreta"
 
 msgctxt "bold.description"
 msgid "If you're in a rich-text-edit area, makes the selected text bold."
-msgstr "Si us trobeu en una àrea d'edició de text enriquit, posa en negreta la selecció."
+msgstr ""
+"Si us trobeu en una àrea d'edició de text enriquit, posa en negreta la "
+"selecció."
 
 msgctxt "bold.execute"
 msgid "You're not in a rich text editing field."
@@ -34,7 +35,9 @@ msgstr "cursiva"
 
 msgctxt "italicize.description"
 msgid "If you're in a rich-text-edit area, makes the selected text italic."
-msgstr "Si us trobeu en una àrea d'edició de text enriquit, posa en cursiva la selecció."
+msgstr ""
+"Si us trobeu en una àrea d'edició de text enriquit, posa en cursiva la "
+"selecció."
 
 msgctxt "italicize.execute"
 msgid "You're not in a rich text editing field."
@@ -48,7 +51,8 @@ msgstr "subratllat"
 
 msgctxt "underline.description"
 msgid "If you're in a rich-text-edit area, underlines the selected text."
-msgstr "Si us trobeu en una àrea d'edició de text enriquit, subratlla la selecció."
+msgstr ""
+"Si us trobeu en una àrea d'edició de text enriquit, subratlla la selecció."
 
 msgctxt "underline.execute"
 msgid "You're not in a rich text editing field."
@@ -96,7 +100,8 @@ msgstr "No us trobeu en un camp d'edició de text enriquit."
 #. use | to separate multiple name values:
 msgctxt "count words.names"
 msgid "count words|word count"
-msgstr "compta les paraules|compta els mots|recompte de mots|recompte de paraules"
+msgstr ""
+"compta les paraules|compta els mots|recompte de mots|recompte de paraules"
 
 msgctxt "count words.description"
 msgid "Displays the number of words in a selection."
@@ -126,7 +131,9 @@ msgstr "enllaça a la viquipèdia"
 
 msgctxt "link to wikipedia.description"
 msgid "Turns a phrase into a link to the matching Wikipedia article."
-msgstr "Transforma una frase a un enllaç a l'article de la Viquipèdia que hi coincideix."
+msgstr ""
+"Transforma una frase a un enllaç a l'article de la Viquipèdia que hi "
+"coincideix."
 
 #. calculate command:
 #. use | to separate multiple name values:
@@ -150,8 +157,7 @@ msgid "Calculates using\n"
 "instead for simple expressions like\n"
 "<code>22/7</code>\n"
 "."
-msgstr ""
-"Calcula-ho fent servir\n"
+msgstr "Calcula-ho fent servir\n"
 "<a href=\"http://www.googleguide.com/help/calculator.html\">Google Calculator</a>\n"
 "que té totes les característiques d'una calculadora científica,\n"
 "    coneix constant com la velocitat de la llum,\n"
@@ -170,8 +176,7 @@ msgid "translate"
 msgstr "tradueix|traduïx"
 
 msgctxt "translate.help"
-msgid ""
-"You can specify the language to translate to,\n"
+msgid "You can specify the language to translate to,\n"
 "    and the language to translate from.\n"
 "    For example, try issuing \"translate mother from english to chinese\".\n"
 "    If you leave out the languages, it will try to guess what you want.\n"
@@ -180,8 +185,7 @@ msgid ""
 "    to how much it can translate a selection at once.\n"
 "    If you want to translate a lot of text, leave out the input and\n"
 "    it will translate the whole page."
-msgstr ""
-"Podeu especificar la llengua a la qual traduir,\n"
+msgstr "Podeu especificar la llengua a la qual traduir,\n"
 "    i la llengua de la qual traduir.\n"
 "    Per exemple, proveu-ho amb «tradueix \"mare\" de l'anglès al xinès».\n"
 "    Si no hi especifiqueu les llengües, s'intentarà esbrinar quines voleu.\n"
@@ -197,7 +201,8 @@ msgstr "Tradueix d'una llengua a una altra."
 
 msgctxt "translate.preview"
 msgid "Translates ${url} into <b>${toLang}</b>."
-msgstr "Tradueix ${url} en <b>${toLang}</b>|Traduïx ${url} en <b>${toLang}</b>."
+msgstr ""
+"Tradueix ${url} en <b>${toLang}</b>|Traduïx ${url} en <b>${toLang}</b>."
 
 msgctxt "translate.preview"
 msgid "Replaces the selected text with the <b>${toLang}</b> translation:"
@@ -235,15 +240,13 @@ msgid "create search command"
 msgstr "crea una ordre de cerca"
 
 msgctxt "create search command.help"
-msgid ""
-"<ol style=\"list-style-image:none\">\n"
+msgid "<ol style=\"list-style-image:none\">\n"
 "  <li>Select a searchbox.</li>\n"
 "  <li>Say 'create search command mysearch'.</li>\n"
 "  <li>Execute.</li>\n"
 "  <li>You now have a command called 'mysearch'.</li>\n"
 "</ol>"
-msgstr ""
-"<ol style=\"list-style-image:none\">\n"
+msgstr "<ol style=\"list-style-image:none\">\n"
 "  <li>Seleccioneu un quadre de cerca.</li>\n"
 "  <li>Escriviu-hi «crea l'ordre de cerca macerca».</li>\n"
 "  <li>Executeu-ho.</li>\n"
@@ -265,29 +268,37 @@ msgstr "Cal que enfoqueu un quadre de cerca abans d'executar l'ordre."
 #~ msgctxt "undo (text edit).names"
 #~ msgid "undo"
 #~ msgstr "desfés"
+
 #~ msgctxt "undo (text edit).execute"
 #~ msgid "You're not in a rich text editing field."
 #~ msgstr "No us trobeu en un camp d'edició de text enriquit."
+
 #~ msgctxt "redo (text edit).names"
 #~ msgid "redo"
 #~ msgstr "refés"
+
 #~ msgctxt "redo (text edit).description"
 #~ msgid "Redoes your latest style/formatting or page-editing changes."
 #~ msgstr ""
 #~ "Refés els vostres darrers canvis d'estil / format o canvis d'edició de "
 #~ "pàgina."
+
 #~ msgctxt "redo (text edit).execute"
 #~ msgid "You're not in a rich text editing field."
 #~ msgstr "No us trobeu en un camp d'edició de text enriquit."
+
 #~ msgctxt "link (to wikipedia).names"
 #~ msgid "link|insert link|linkify"
 #~ msgstr "enllaça|insereix un enllaç|inserix un enllaç|transforma en enllaç"
+
 #~ msgctxt "calculate.description"
 #~ msgid "Calculates the value of a mathematical expression."
 #~ msgstr "Calcula el valor d'una expressió matemàtica."
+
 #~ msgctxt "calculate.preview"
 #~ msgid "Calculates an expression. E.g., 22/7."
 #~ msgstr "Calcula una expressió. Ex., 22/7."
+
 #~ msgctxt "calculate.preview"
 #~ msgid ""
 #~ "${expression} = <b>${result}</b>{if error}<p><b>Error:</b> ${error}</p>{/"
@@ -295,13 +306,15 @@ msgstr "Cal que enfoqueu un quadre de cerca abans d'executar l'ordre."
 #~ msgstr ""
 #~ "${expression} = <b>${result}</b>{if error}<p><b>Error:</b> ${error}</p>{/"
 #~ "if}"
+
 #~ msgctxt "calculate.execute"
 #~ msgid "Requires a expression."
 #~ msgstr "Cal una expressió."
+
 #~ msgctxt "calculate.execute"
 #~ msgid "Invalid expression"
 #~ msgstr "L'expressió no és vàlida."
+
 #~ msgctxt "calculate.execute"
 #~ msgid "Error calculating expression: ${expression}"
 #~ msgstr "S'ha produït un error en calcular l'expressió: ${expression}"
-
